--- a/jade/circle/circle02.jade
+++ b/jade/circle/circle02.jade
@@ -9,64 +9,150 @@ block content
 
 	mixin list(1)
 
+	div#canvas
+
 	include ../inc/_script-sets.jade
-	script
-		:coffee
-			window.addEventListener "DOMContentLoaded", ->
-				camera = ""
-				scene = ""
-				renderer = ""
+	script.
+		window.addEventListener("DOMContentLoaded", function(){
+			var camera,scene,renderer;
+			var canvas = document.getElementById("canvas");
 
-				init = ->
-					###
-					 * カメラの設定
-					###
-					width = document.body.clientWidth
-					height = window.innerHeight
-					fov = 45
-					aspect = width / height
-					near = 1
-					fav = 1000
+			init();
 
-					camera = new THREE.PerspectiveCamera fov, aspect, near, fav
-					camera.position.set 50, 50, 150
-					camera.up.set 0, 0, 1
-					camera.lookAt {x: 0, y: 0, z: 0}
+			function init(){
+				/*
+				 * カメラの設定
+				*/
+				var width = canvas.clientWidth,
+						height = window.innerHeight,
+						fov = 45,
+						aspect = width / height,
+						near = 1,
+						fav = 1000;
 
+				camera = new THREE.PerspectiveCamera(fov, aspect, near, fav);
+				camera.position.set(50, 50, 150);
+				camera.up.set(0, 0, 1);
+				camera.lookAt({x: 0, y: 0, z: 0});
 
-					###
-					 * シーンの作成
-					###
-					scene = new THREE.Scene
+				/*
+				 * シーンの作成
+				*/
+				scene = new THREE.Scene();
 
+				/*
+				 * 軸ヘルパー
+				*/
+				var axis = new THREE.AxisHelper(100);
+				axis.position.set(0, 0, 0);
+				scene.add(axis);
 
-					###
-					 * 軸ヘルパー
-					###
-					axis = new THREE.AxisHelper 100
-					axis.position.set 0, 0, 0
-					scene.add axis
+				/*
+				 * メッシュの作成
+				*/
+				// ジオメトリーの作成
+				geometry = new THREE.CylinderGeometry(40, 40, 80, 50, 50, true);
 
+				// マテリアルの作成
+				material = new THREE.MeshNormalMaterial({shading: THREE.SmoothShading, side: THREE.DoubleSide});
 
-					###
-					 * メッシュの作成
-					###
-					#ジオメトリーの作成
-					geometry = new THREE.CylinderGeometry 40, 40, 80, 50, 50, true
+				cylinder = new THREE.Mesh(geometry, material);
+				scene.add(cylinder);
 
-					#マテリアルの作成
-					material = new THREE.MeshNormalMaterial {shading: THREE.SmoothShading, side: THREE.DoubleSide}
+				/*
+				 * レンダラーの作成
+				*/
+				renderer = new THREE.WebGLRenderer
+				renderer.setSize(width, height);
+				canvas.appendChild(renderer.domElement);
+				renderer.render(scene, camera);
+			}
+		});
 
-					cylinder = new THREE.Mesh geometry, material
-					scene.add cylinder
+	:markdown
+		## 実装
+		基本は[ベース](../index.html)と同じ
 
+		---
 
-					###
-					 * レンダラーの作成
-					###
-					renderer = new THREE.WebGLRenderer
-					renderer.setSize width, height
-					document.body.appendChild renderer.domElement
-					renderer.render scene, camera
+		### メッシュ
+		```
+		/*
+		 * メッシュの作成
+		*/
+		// ジオメトリーの作成
+		geometry = new THREE.CylinderGeometry(40, 40, 80, 50, 50, true);
 
-				init()
+		// マテリアルの作成
+		material = new THREE.MeshNormalMaterial({shading: THREE.SmoothShading, side: THREE.DoubleSide});
+
+		cylinder = new THREE.Mesh(geometry, material);
+		scene.add(cylinder);
+		```
+
+		> THREE.CylinderGeometry(radiusTop, radiusBottom, height, radiusSegments, heightSegments, openEnded, thetaStart, thetaLength)  
+		> [docs - CylinderGeometry](http://threejs.org/docs/#Reference/Extras.Geometries/CylinderGeometry)
+
+		> THREE.MeshNormalMaterial(parameters)  
+		> [docs - MeshNormalMaterial](http://threejs.org/docs/#Reference/Materials/MeshNormalMaterial)
+
+		---
+
+		### All Codes
+		```
+		window.addEventListener("DOMContentLoaded", function(){
+			var camera,scene,renderer;
+			var canvas = document.getElementById("canvas");
+
+			init();
+
+			function init(){
+				/*
+				 * カメラの設定
+				*/
+				var width = canvas.clientWidth,
+						height = window.innerHeight,
+						fov = 45,
+						aspect = width / height,
+						near = 1,
+						fav = 1000;
+
+				camera = new THREE.PerspectiveCamera(fov, aspect, near, fav);
+				camera.position.set(50, 50, 150);
+				camera.up.set(0, 0, 1);
+				camera.lookAt({x: 0, y: 0, z: 0});
+
+				/*
+				 * シーンの作成
+				*/
+				scene = new THREE.Scene();
+
+				/*
+				 * 軸ヘルパー
+				*/
+				var axis = new THREE.AxisHelper(100);
+				axis.position.set(0, 0, 0);
+				scene.add(axis);
+
+				/*
+				 * メッシュの作成
+				*/
+				// ジオメトリーの作成
+				geometry = new THREE.CylinderGeometry(40, 40, 80, 50, 50, true);
+
+				// マテリアルの作成
+				material = new THREE.MeshNormalMaterial({shading: THREE.SmoothShading, side: THREE.DoubleSide});
+
+				cylinder = new THREE.Mesh(geometry, material);
+				scene.add(cylinder);
+
+				/*
+				 * レンダラーの作成
+				*/
+				renderer = new THREE.WebGLRenderer
+				renderer.setSize(width, height);
+				canvas.appendChild(renderer.domElement);
+				renderer.render(scene, camera);
+			}
+		});
+		```
