--- a/jade/inc/_nav-list.jade
+++ b/jade/inc/_nav-list.jade
@@ -26,6 +26,8 @@ mixin list(val)
 	- lists.push({link: "other/other01", text: "other01"});
 	- lists.push({link: "other/other02", text: "other02"});
 	- lists.push({link: "helper/helper01", text: "helper01"});
+	- lists.push({link: "mouse/mouse01", text: "mouse01"});
+	- lists.push({link: "mouse/mouse02", text: "mouse02"});
 	- lists.push({link: "demo/circle2d-animation", text: "DEMO: circle2d-animation"});
 	- lists.push({link: "demo/buffer-geometry", text: "DEMO: buffer-geometry"});
 	
